release booking service